# otrix

./: .gitignore  CMakeLists.txt  Makefile  Makefile2  create_tap.sh  default.nix  run_qemu.sh
api/otrix/: immediate_console.hpp
api/otrix/common/: error.hpp
arch/x86_64/: CMakeLists.txt  boot.s  context.s  cxxabi.cpp  grub.cfg  idt.cpp  interrupts.s  irq_manager.cpp  kvmclock.cpp  lapic.cpp  linker.ld  multiboot.s  paging.cpp  pic.cpp  pit.cpp
arch/x86_64/include/arch/: asm.h  common.h  context.h  idt.h  idt.hpp  io.h  irq_manager.hpp  kvmclock.hpp  lapic.hpp  paging.hpp  pic.hpp  pit.hpp
cmake/: toolchain-x86.cmake
common/: CMakeLists.txt
common/include/common/: assert.h  error.h  error.hpp  hash_map.hpp  list.h  utils.h
common/test/: list_test.c  test_runner.c
core/: kmain.c
dev/: CMakeLists.txt  acpi.c  acpi.cpp  immediate_console.cpp  lapic.cpp  pci.c  pci.cpp  pci.h  serial.c  serial.h  virtio.cpp  virtio_blk.cpp  virtio_console.cpp  virtio_net.cpp
dev/include/dev/: acpi.h  acpi.hpp  lapic.hpp  pci.h  pci.hpp  serial.h  virtio.hpp  virtio_blk.hpp  virtio_console.hpp  virtio_net.hpp
include/kernel/: error.h
kernel/: CMakeLists.txt  cpp_stubs.cpp  kmain.c  kmain.cpp  kmem.c  kmem.cpp  kthread.c  kthread.cpp  msgq.cpp  mutex.cpp  newlib_stubs.c  newlib_stubs.cpp  otrix.cpp  semaphore.cpp  timer_service.cpp  waitq.cpp
kernel/include/kernel/: alloc.hpp  kmem.h  kmem.hpp  kthread.h  kthread.hpp  msgq.hpp  mutex.hpp  semaphore.hpp  task.h  timer_service.hpp  waitq.hpp
kernel/test/: kmem_test.c  test_runner.c
net/: CMakeLists.txt  arp.cpp  icmp.cpp  ipv4.cpp  net_task.cpp  netif.cpp  tcp.cpp  tcp_socket.cpp
net/include/net/: arp.hpp  ethernet.hpp  icmp.hpp  ipv4.hpp  linkif.hpp  net_task.hpp  netif.hpp  sockbuf.hpp  socket.hpp  tcp.hpp  tcp_socket.hpp
nix/: mini-printf.nix  unity.nix
