add_library(otrix_kmem kmem.c)
target_include_directories(otrix_kmem PUBLIC include/)

if(BUILD_HOST_TESTS)
add_executable(kmem_test test/test_runner.c test/kmem_test.c)
target_include_directories(kmem_test PUBLIC include/)
target_link_libraries(kmem_test unity otrix_kmem)
add_test(NAME kmem_test COMMAND kmem_test)
else()
add_executable(otrix_kernel kmain.cpp kthread.cpp newlib_stubs.c cpp_stubs.cpp)
target_link_libraries(otrix_kernel otrix_dev otrix_arch otrix_kmem)
target_include_directories(otrix_kernel PUBLIC include/)

install(TARGETS otrix_kernel RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
endif()
